kustomize/enviroments/prod/env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
spec:
  template:
    spec:
      containers:
      - name: django
