kustomize/enviroments/prod/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deploy
spec:
  replicas: 2
